# template-c

./: .clang-format  .clang-tidy  CMakeLists.txt  license.rst  readme.rst
doc/: CMakeLists.txt  conf.py  doxyfile.in  index.rst  requirements.txt
doc/_templates/: layout.html
doc/src/: about.rst  api.rst  docs.rst  index.rst  test.rst
src/: CMakeLists.txt
src/include/test/: benchmark.h  unit_test.h
src/include/util/: cli.h  color.h  env.h  log.h  parse.h  string.h  timespec.h  util.h
src/lib/template/: main.c
src/lib/test/: benchmark.c  unit_test.c
src/lib/util/: cli.c  color.c  env.c  log.c  parse.c  string.c  timespec.c
test/: CMakeLists.txt
test/benchmark/: parse.c  string.c
test/cmake/: Benchmark.cmake  Coverage.cmake  SystemTest.cmake  TestProperties.cmake  UnitTest.cmake
test/unit/: check_raises.c  cli.c  parse.c  string.c  timespec.c
